added drag and drop knowledge
